updated the code to limit it's Discord API calls